libavformat/avformat.nim

                         frame: ptr AVFrame): AVRational {.cdecl,
    importc: "av_guess_frame_rate", dynlib: avformatdll.}
proc avformat_match_stream_specifier*(s: ptr AVFormatContext; st: ptr AVStream;
                                     spec: cstring): cint {.cdecl,
    importc: "avformat_match_stream_specifier", dynlib: avformatdll.}
proc avformat_queue_attached_pictures*(s: ptr AVFormatContext): cint {.cdecl,
    importc: "avformat_queue_attached_pictures", dynlib: avformatdll.}
type
  AVTimebaseSource* {.size: sizeof(cint).} = enum
    AVFMT_TBCF_AUTO = - 1, AVFMT_TBCF_DECODER, AVFMT_TBCF_DEMUXER


proc avformat_transfer_internal_stream_timing_info*(ofmt: ptr AVOutputFormat;
    ost: ptr AVStream; ist: ptr AVStream; copy_tb: AVTimebaseSource): cint {.cdecl,
    importc: "avformat_transfer_internal_stream_timing_info", dynlib: avformatdll.}
proc av_stream_get_codec_timebase*(st: ptr AVStream): AVRational {.cdecl,
    importc: "av_stream_get_codec_timebase", dynlib: avformatdll.}